tests/fail/vars_not_neq.mbc
name n : message
name m : message
abstract f : message->message
abstract g : message->message
system null.

goal test :
  forall (x:message, y:message),
  n = m => false.
Proof.
Qed.

goal test :
  forall (x:message, y:message),
  f(n) = g(m) => false.
Proof.
Qed.
